--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,30 +13,37 @@
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
         <label asp-for="Protien"></label>
         <input asp-for="Protien" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="Protien"></span>
     </div>
     <div class="form-group">
         <label asp-for="Calories"></label>
         <input asp-for="Calories" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="Calories"></span>
     </div>
     <div class="form-group">
         <label asp-for="Bread"></label>
         <input asp-for="Bread" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="Bread"></span>
     </div>
     <div class="form-group">
         <label asp-for="ToppingOne"></label>
         <input  asp-for="ToppingOne" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="ToppingOne"></span>
     </div>
     <div class="form-group">
         <label asp-for="ToppingTwo"></label>
         <input asp-for="ToppingTwo" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="ToppingTwo"></span>
     </div>
     <div class="form-group">
         <label asp-for="Beverage"></label>
         <input asp-for="Beverage" id="" class="form-control">
+        <span class="text-danger" asp-validation-for="Beverage"></span>
     </div>
     <input type="submit" value="Build" class="btn btn-primary">
 </form>
